--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "gatsby": "^1.9.17",
     "gatsby-link": "^1.6.15",
-    "gatsby-plugin-react-helmet": "^1.0.5"
+    "gatsby-plugin-react-helmet": "^1.0.5",
+    "rebass": "^1.0.4",
+    "sicario": "^0.2.0",
+    "styled-components": "^2.1.2"
   },
   "keywords": [
     "gatsby"
