--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "gatsby": "^1.9.17",
     "gatsby-link": "^1.6.15",
     "gatsby-plugin-react-helmet": "^1.0.5",
+    "gatsby-plugin-styled-components": "^1.0.5",
     "rebass": "^1.0.4",
-    "sicario": "^0.2.0",
+    "sicario": "^0.5.0",
     "styled-components": "^2.1.2"
   },
   "keywords": [
