--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-typography": "^1.7.9",
+    "lodash": "^4.17.4",
     "rebass": "^1.0.4",
     "sicario": "^0.5.16",
     "styled-components": "^2.1.2"
