--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-typography": "^1.7.9",
     "lodash": "^4.17.4",
+    "react-responsive-carousel": "^3.1.25",
     "rebass": "^1.0.4",
-    "sicario": "^0.9.4",
+    "sicario": "^0.9.10",
     "styled-components": "^2.1.2"
   },
   "keywords": [
